[metadata]
name = conditional
author = Computer Science House
author-email = evals@csh.rit.edu
summary = A comprehensive membership evaluations solution for Computer Science House
description-file = README.md
home-page = https://conditional.csh.rit.edu
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Office/Business
    Topic :: Sociology
keywords =
    csh
    computer science house
    eval
    evaluations
    conditional

[files]
packages =
    conditional

[bdist_wheel]
universal = 1
